# Octo

./: README.md  install_yottadb.sh  ydb_dir.tgz  ydb_dir_130.tgz
ydb_directory/global/ydbdir_db/: mumps.data  mumps.gld  mumps.octo
ydb_external/ydbpip/extcall/: alerts.c  alerts.xc  alerts.xc.in  alertsversion  asc2ebc.c  atmutils.c  dbinteg.err  devutils.c  ebc2asc.c  elfhash.c  expsca.c  extcall.h  extcall.xc  extcall.xc.in  extcall_alert.h  extcallversion  getquijob.c  gtmio.h  gtmxc_types.h  lnx.c  logsca.c  md5.h  md5c.c  merror.err  password.c  pidutils.c  readport.c  remote.c  rtb.c  rtbar.c  sca_alert.sh  scamd5.c  scamd5.h  scatype.h  shlib.c  (+15 more)
ydb_external/ydbpip/rtns/: CMakeLists.txt  SCAIO.M  _CHARSET.m  _D.m  _DBFIX.m  _DIR.m  _EDIT.m  _ENCRYPT.m  _ET.m  _FSEL.m  _G.m  _GCHANGE.m  _GCOPY.m  _GFIND.m  _GI.m  _GIGEN.m  _GO.m  _GOGEN.m  _GTMCONV.m  _HTAPI.m  _ISSPL.m  _LNM.m  _MAIL.m  _MPRCMON.m  _MTAPI.m  _MTAPI.m_orig  _OSSCRPT.m  _PCNTRL.m  _PRIO.m  _QFUNC.m  _QUEFUNC.m  _RDIF.m  _READ.m  _RSEL.m  _RSET.m  _RTAPI.m  _RTNDESC.m  _SCAIO.m  _SRV.m  _T.m  (+65 more)
ydb_monitor/monitor/: ZGVSTAT.m  freecnt.sh  receiver_backlog.sh  receiver_check.sh  source_backlog.sh  source_check.sh  zgvstat.sh
ydb_monitor/telegraf/: freecnt.conf  receiver_backlog.conf  receiver_check.conf  source_backlog.conf  source_check.conf  zgvstat.conf
ydb_utilities_scripts/: freeze_state  primary_start  primary_stop  repl_state  replication_check  replication_off  replication_on  replication_start  replication_stop  secondary_start  secondary_stop  show_region  start_multi_site_replication
(+4 files in other folders)
